jansson-cpp/include/jansson.hpp

constexpr bool THREAD_SAFE_REFCOUNT = true;
constexpr bool THREAD_SAFE_REFCOUNT = false;
/* Forward declarations */
class json_t;
/* Type enumeration */
enum class json_type {
    OBJECT,
    ARRAY,
    STRING,
    INTEGER,
    REAL,
    TRUE,
    FALSE,
    NULL_TYPE
};
/* Reference counting functions */
inline json_t* json_incref(json_t* json);
inline void json_decref(json_t* json);
/* Type checking functions */
inline json_type json_typeof(const json_t* json) {
    return json ? json->type : json_type::NULL_TYPE;
}
inline json_t* json_incref(json_t* json) {
    if (json && json->refcount != static_cast<size_t>(-1)) {
        json_incref_internal(json);
    }
    return json;
}
void json_delete(json_t* json);
inline void json_decref(json_t* json) {
    if (json && json->refcount != static_cast<size_t>(-1) && 
        json_decref_internal(json) == 0) {
        json_delete(json);
    }
}
struct json_error_t {
    int line;
    int column;
    int position;
    char source[JSON_ERROR_SOURCE_LENGTH];
    char text[JSON_ERROR_TEXT_LENGTH];
    
    json_error_t() : line(0), column(0), position(0) {
        source[0] = '\0';
        text[0] = '\0';
    }
};
/* Object iteration */
void* json_object_iter(json_t* object);
void* json_object_key_to_iter(const std::string& key);
void* json_object_iter_next(json_t* object, void* iter);
const std::string json_object_iter_key(void* iter);
json_t* json_object_iter_value(void* iter);
int json_object_iter_set_new(json_t* object, void* iter, json_t* value);
/* Array manipulation */
size_t json_array_size(const json_t* array);
json_t* json_array_get(const json_t* array, size_t index);
int json_real_set(json_t* real, double value);
json_t* json_deep_copy(const json_t* value);
using json_load_callback_t = size_t(*)(void* buffer, size_t buflen, void* data);
inline int JSON_INDENT(int n) { return (n) & JSON_MAX_INDENT; }
inline int JSON_REAL_PRECISION(int n) { return ((n) & 0x1F) << 11; }
using json_dump_callback_t = int(*)(const char* buffer, size_t size, void* data);
int json_dump_callback(const json_t* json, json_dump_callback_t callback, void* data, size_t flags);
using json_free_t = void(*)(void*);
inline int json_object_iter_set(json_t* object, void* iter, json_t* value) {
    return json_object_iter_set_new(object, iter, json_incref(value));
}